# apod-wallpaper-rs

./: Cargo.toml  flake.nix
src/: apod.rs  applet.rs  config.rs  lib.rs  main.rs  switcher.rs  utils.rs
src/desktop/: hyprland.rs  mod.rs  plasma.rs
src/gui/: image_grid.rs  mod.rs
